# text2mcp

./: LICENSE  README.md  pyproject.toml
text2mcp/: __init__.py
text2mcp/cli/: main.py
text2mcp/core/: generator.py
text2mcp/server/: mcp_server.py  runner.py
text2mcp/templates/: example.md
text2mcp/utils/: config.py  installer.py  llm_client.py
